@@ -1,5 +1,11 @@
 2018-03-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/dcm.c (DCM_ReadRGBImage): Don't use rescale map if it was
+	not allocated.  This issue was induced in this development cycle
+	due to disabling generating the rescale map.  Fixes oss-fuzz 6995
+	"graphicsmagick/coder_DCM_fuzzer: Null-dereference READ in
+	DCM_ReadRGBImage". (Credit to OSS-Fuzz)
+
 	* coders/dib.c (DecodeImage): Report failure to decode to expected
 	amount of pixel data as an error.  Fixes oss-fuzz 7007
 	"graphicsmagick/enhance_fuzzer: Use-of-uninitialized-value in
